# Laba_1

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  UI.h  main.cpp  stack.h  stackElementParent.h  textControl.h  textOperation.h
